[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "byse-full-suite"
version = "2.1.0"
description = "Byse.sx / Filemoon 完整 API SDK + CLI + Dashboard + Downloader"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Arena Agent" }]
keywords = ["byse", "filemoon", "video-hosting", "api", "sdk", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25",
    "tqdm>=4.60",
]

[project.optional-dependencies]
rich = ["rich>=12.0"]
ytdlp = ["yt-dlp>=2023.0"]
server = ["flask>=2.0", "flask-cors>=3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "black>=23.0",
    "requests-mock>=1.10",
]

[project.scripts]
byse-cli = "byse_full_suite.cli:main"
byse-uploader = "byse_uploader:main"
byse-downloader = "byse_full_suite.downloader:main"

[project.urls]
Homepage = "https://github.com/rushiaismywaifu/byse-full-suite"
Repository = "https://github.com/rushiaismywaifu/byse-full-suite"
Documentation = "https://github.com/rushiaismywaifu/byse-full-suite#readme"
"Bug Tracker" = "https://github.com/rushiaismywaifu/byse-full-suite/issues"

[tool.setuptools]
packages = ["byse_full_suite"]
py-modules = ["byse_uploader"]

[tool.setuptools.package-data]
byse_full_suite = ["*.html", "*.md"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
